--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         --secondary-color: #a3abba;
         --tertiary-color: #a3abba;
         --primary-color: #62c4ff;
-        --error-color: #ff3c74;
+        --error-color: #e8e9ed;
         --progress-bar-background: #3f3f44;
         --progress-bar-fill: #62c4ff;
         --code-bg-color: #3f3f44;
